<?xml version="1.0" encoding="utf-8"?>

<resources>


    <!-- author -->
    <string name="author1" translatable="false">Dário Pedro</string>
    <string name="email_author2" translatable="false">df.pedro@campus.fct.unl.pt</string>

    <!-- application start -->
    <string name="app_name">WiFi Finder</string>
    <string name="app_description">Find your phone!</string>
    <string name="app_company_name" translatable="false">FCT</string>
    <string name="app_copyright">Copyright FCT 2017</string>
    <!-- application end -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_access_points">Access Points</string>
    <string name="action_channel_rating">Channel Rating</string>
    <string name="action_channel_graph">Channel Graph</string>
    <string name="action_time_graph">Time Graph</string>
    <string name="action_export">Export</string>
    <string name="action_senddb">Send to DB</string>
    <string name="action_channel_available">Available Channels</string>
    <string name="action_vendors">Vendors</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_register">Register</string>
    <string name="action_gmaps">Localization</string>
    <string name="action_sensorf">Sensor Fusion</string>
    <string name="action_step_counter">Step Counter</string>
    <string name="action_odometry">Odometry</string>
    <string name="action_findap">Find AP</string>

    <string name="button_ok" translatable="false">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="no_data_geo_warning">Some users running Android OS 6 (Marshmallow) have reported that the location service must be enabled for the application to see WiFi networks. Marshmallow users may need to turn on the location service, even though WiFi Analyzer does not explicitly require it. This appears to be attributed to a potential issue in Android OS 6 that requires location service in order to see WiFi networks.</string>
    <string name="wifi_channels_list_url" translatable="false">https://en.wikipedia.org/wiki/List_of_WLAN_channels</string>

    <string name="export_not_available">Export not available</string>

    <string name="channel_rating_best">Best Channels:</string>
    <string name="channel_rating_best_none">None</string>
    <string name="channel_rating_best_alternative">, try alternative WiFi Band</string>
    <string name="channel_rating_heading_rating">Channel Rating</string>
    <string name="channel_rating_heading_number">Channel Number</string>
    <string name="channel_rating_heading_count">Access Point Count</string>
    <string name="channel_short_name">CH</string>

    <string name="graph_channel_axis_x">WiFi Channels</string>
    <string name="graph_time_axis_x">Scan Count</string>
    <string name="graph_axis_y">Signal Strength (dBm)</string>


    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome,</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>

    <!-- Strings related to forgot account-->
    <string name="action_recover">Recover</string>
    <string name="remembered_password">Just remembered it?</string>

    <!-- Strings related to create account -->
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="device_name">Device name</string>
    <string name="string_on">ON</string>
    <string name="string_off">OFF</string>




    <!-- sensor-fusion start -->
    <string name="title_main_activity">Sensor fusion demo</string>
    <string name="sf_title_section1">Improved Orientation Sensor 1</string>
    <string name="sf_title_section2">Improved Orientation Sensor 2</string>
    <string name="sf_title_section3">Android Rotation Vector</string>
    <string name="sf_title_section4">Calibrated Gyroscope</string>
    <string name="sf_title_section5">Gravity and Compass</string>
    <string name="sf_title_section6">Accelerometer and Compass</string>
    <string name="title_activity_sensor_selection">Sensor fusion</string>
    <string name="title_activity_step_counter">Step Counter</string>
    <string name="title_activity_about">About</string>
    <string name="gyroscope_missing">Gyroscope Missing</string>
    <string name="gyroscope_missing_message">Your device has no hardware gyroscope sensor, which would be necessary for this app to work properly. Please run it on a newer device that has a gyroscope.</string>
    <string name="OK">OK</string>
    <string name="Roll">R</string>
    <string name="Pitch">P</string>
    <string name="Yaw">Y</string>

    <string name="X">X</string>
    <string name="Y">Y</string>





    <!-- step counte start -->
    <string name="step_number">Step count</string>
    <string name="step_length">Step Size:</string>
    <string name="velocity">Speed</string>
    <string name="step_unit"> </string>
    <string name="kg">kg</string>
    <string name="ms">ms</string>
    <string name="cm">cm</string>
    <string name="m">m</string>
    <string name="distance">Distance</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="sensor_accelarometer">Accelerometer</string>
    <string name="sensor_step_detector">Step Detector</string>
    <string name="sensor_step_counter">Step Counter</string>


    <!-- settings start -->
    <string name="start_menu_title">Start</string>
    <string name="start_menu_summary" translatable="false">%s</string>
    <string name="start_menu_key" translatable="false">start_menu</string>

    <string name="country_code_title">Country</string>
    <string name="country_code_summary" translatable="false">%s</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <string name="wifi_band_title">WiFi Band</string>
    <string name="wifi_band_summary" translatable="false">%s</string>
    <string name="wifi_band_key" translatable="false">wifi_band</string>
    <string name="wifi_band_default" translatable="false">0</string>

    <string name="scan_interval_title">Scan Interval</string>
    <string name="scan_interval_summary">%d seconds between each scan</string>
    <string name="scan_interval_key" translatable="false">scan_interval</string>
    <integer name="scan_interval_min" translatable="false">1</integer>
    <integer name="scan_interval_max" translatable="false">30</integer>
    <integer name="scan_interval_default" translatable="false">5</integer>

    <string name="step_length_title">Step Length</string>
    <string name="step_length_summary">%d cm step length</string>
    <string name="step_length_key" translatable="false">step_length</string>
    <integer name="step_length_min" translatable="false">30</integer>
    <integer name="step_length_max" translatable="false">125</integer>
    <integer name="step_length_default" translatable="false">78</integer>

    <string name="weight_title">Weight</string>
    <string name="weight_summary">%d kg</string>
    <string name="weight_key" translatable="false">weight</string>
    <integer name="weight_min" translatable="false">30</integer>
    <integer name="weight_max" translatable="false">125</integer>
    <integer name="weight_default" translatable="false">70</integer>

    <string name="sort_by_title">Sort Access Points By</string>
    <string name="sort_by_summary" translatable="false">%s</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="sort_by_default" translatable="false">0</string>

    <string name="show_all_title">Show All</string>
    <string name="show_all_summary" translatable="false">%s</string>
    <string name="show_all_key" translatable="false">show_all</string>
    <string name="show_all_default" translatable="false">0</string>


    <string name="group_by_title">Group Access Points By</string>
    <string name="group_by_summary" translatable="false">%s</string>
    <string name="group_by_key" translatable="false">group_by</string>
    <string name="group_by_default" translatable="false">0</string>

    <string name="ap_view_title">Access Point Display</string>
    <string name="ap_view_summary" translatable="false">%s</string>
    <string name="ap_view_key" translatable="false">view</string>
    <string name="ap_view_default" translatable="false">0</string>

    <string name="channel_graph_legend_title">Channel Graph Legend Display</string>
    <string name="channel_graph_legend_summary" translatable="false">%s</string>
    <string name="channel_graph_legend_key" translatable="false">channel_graph_legend</string>
    <string name="channel_graph_legend_default" translatable="false">2</string>

    <string name="time_graph_legend_title">Time Graph Legend Display</string>
    <string name="time_graph_legend_summary" translatable="false">%s</string>
    <string name="time_graph_legend_key" translatable="false">time_graph_legend</string>
    <string name="time_graph_legend_default" translatable="false">0</string>

    <string name="theme_title">Theme</string>
    <string name="theme_summary" translatable="false">%s</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default" translatable="false">0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_maps">Maps</string>
    <string name="notfound">N/A</string>
    <string name="reset">Reset</string>
    <string name="chat_message">chat_message</string>
    <string name="action_chat">Multicast Chat</string>
    <string name="swap">Swap</string>


    <!-- settings end -->


</resources>
