<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/odomRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="@string/X"
                android:id="@+id/textViewX"
                android:textColor="#9a7f52"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="@string/zero"
                android:id="@+id/textViewX_value"
                android:textColor="#9a7f52"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center|top" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:text="@string/Y"
                    android:id="@+id/textViewY"
                    android:textColor="#9a7f52"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <TextView
                    style="@style/TextAppearance.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:id="@+id/textViewY_value"
                    android:textColor="#9a7f52"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center|top" />
            </LinearLayout>
        </LinearLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</RelativeLayout>
